# book-management-backend/internal/routers/book_routes.go
@@ -1,0 +1,14 @@
+package router
+
+import (
+	"book-management/internal/handlers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterBookRoutes(rg *gin.RouterGroup, handler *handlers.BookHandler) {
+	books := rg.Group("/books")
+	{
+		books.GET("/:id", handler.GetBookByID)
+	}
+}
